infrastructure/kustomize/base/etcd-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: etcd-allow-ingress
  namespace: redhat-ods-applications
spec:
  podSelector:
    matchLabels:
      app: etcd
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 2379
      protocol: TCP
